🐛 fix(collector): WebSocket 장 개시 LazyInitializationException 수정
StockGradeDomesticSymbolProvider가 트랜잭션 없이 LAZY 프록시를 접근해
매일 08:55 국내 틱 구독이 전량 실패하는 문제를 수정한다.

findByGradeInOrderByGradeAsc(StockGrade 엔티티 반환) → findSymbolsByGradeIn
(JPQL symbol projection)으로 교체하여 Stock 엔티티 로드 및 세션 의존성을 제거한다.

Closes #25

🗿 MoAI <email@mo.ai.kr>