@@ -1,10 +1,7 @@
 package com.aaa.collector.stock.grade;
 
 import com.aaa.collector.kis.websocket.DomesticSymbolProvider;
-import com.aaa.collector.stock.StockGrade;
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -20,7 +17,7 @@ public class StockGradeDomesticSymbolProvider implements DomesticSymbolProvider 
     /** 최대 구독 종목 수 (200건 = 체결 + 호가). */
     private static final int MAX_SYMBOLS = 100;
 
-    /** A등급 우선 정렬 기준. */
+    /** A등급 우선 정렬 기준. DB 쿼리가 grade ASC로 정렬하므로 A가 B보다 먼저 반환된다. */
     private static final List<String> GRADE_PRIORITY = List.of("A", "B");
 
     private final StockGradeRepository stockGradeRepository;
@@ -34,18 +31,8 @@ public class StockGradeDomesticSymbolProvider implements DomesticSymbolProvider 
      */
     @Override
     public List<String> getDomesticSymbols() {
-        List<StockGrade> grades = stockGradeRepository.findByGradeInOrderByGradeAsc(GRADE_PRIORITY);
-        // A등급 우선으로 최대 MAX_SYMBOLS개 선택
-        return grades.stream()
-                .sorted(
-                        Comparator.comparingInt(
-                                g -> {
-                                    int idx = GRADE_PRIORITY.indexOf(g.getGrade());
-                                    // 목록에 없는 등급은 맨 뒤로
-                                    return idx < 0 ? Integer.MAX_VALUE : idx;
-                                }))
+        return stockGradeRepository.findSymbolsByGradeIn(GRADE_PRIORITY).stream()
                 .limit(MAX_SYMBOLS)
-                .map(sg -> sg.getStock().getSymbol())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
